test/type-check/should-pass/le.bril
#To test if le works.
main { 
  v0: int = const 9;
  v1: int = const -20;
  res0: bool = le v0 v1;
  print res0;
  v1: int = const 10;
  res1: bool = le v0 v1;
  print res1;
  v1: int = const 9;
  res2: bool = le v0 v1;
  print res2;
}